packages/shulker-operator/src/reconcilers/minecraft_server/snapshots/shulker_operator__reconcilers__minecraft_server__config_map__bukkit__tests__from_spec.snap
---
source: packages/shulker-operator/src/reconcilers/minecraft_server/config_map.rs
expression: config
---
settings:
  allow-end: false
auto-updater:
  enabled: false

