packages/shulker-operator/src/reconcilers/minecraft_server/snapshots/shulker_operator__reconcilers__minecraft_server__config_map__bukkit__tests__to_string.snap
---
source: packages/shulker-operator/src/reconcilers/minecraft_server/config_map.rs
expression: yml
---
settings:
  allow-end: true
auto-updater:
  enabled: false


